--- a/front-identificador-digitos/src/App.css
+++ b/front-identificador-digitos/src/App.css
@@ -2,37 +2,52 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Header-izq {
+  width: 20%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-left: 5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header-logo {
+  width: 120px;
+  border-radius: 10px;
+  background: rgb(8, 226, 146);
 }
+
+.Header-der {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  width: 55%;
+  margin-right: 30px;
+}
+
+.Header-btn {
+  margin: 0px 10px 0px 10px;
+  width: 22.5%;
+  background: rgb(8, 226, 146);
+  border-radius: 10px;
+}
+/*
+0 0 255 
+0 187 255
+255 234 0 
+255 0 0 
+
+40 - 255
+22 - 
+*/
