--- a/front-identificador-digitos/src/App.css
+++ b/front-identificador-digitos/src/App.css
@@ -1,30 +1,42 @@
+@import url('https://fonts.googleapis.com/css?family=Kenia');
+
+html, body {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;    
+}
+
 .App {
+  width: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 10vh;
+  background: linear-gradient(to bottom, #3A7b99,  #4391b6);   
+  height: 85px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .Header-izq {
-  width: 20%;
+  width: 15%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 5%;
+  justify-content: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 80px;
 }
 
 .Header-logo {
-  width: 120px;
-  border-radius: 10px;
-  background: rgb(8, 226, 146);
+  width: 100%;
+  height: auto;
+  color: #090555;
 }
 
 .Header-der {
@@ -32,15 +44,57 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
+  gap: 25px;
   width: 55%;
+  font-size: 20px;
   margin-right: 30px;
 }
 
 .Header-btn {
-  margin: 0px 10px 0px 10px;
-  width: 22.5%;
-  background: rgb(8, 226, 146);
+  height: auto;
   border-radius: 10px;
+  padding: 10px 20px 10px 20px;
+  color: #090555;
+}
+
+.Header-text {
+  height: auto;
+  border-radius: 10px;
+  padding: 10px 20px 10px 20px;
+  color: #090555;
+}
+
+.container {
+  height: 100%;
+  background: linear-gradient(to bottom, #4391b6, #70afce, #a5def1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 80px;
+}
+
+.cont-b {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+.info, .quest, .ans {
+  display: flex;
+  height: max-content;
+  width: 60%;
+  align-items: center;
+  justify-content: center;
+  font-size: xx-large; 
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
+}
+
+.quest, .ans {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: xx-large;
 }
 /*
 0 0 255 
