--- a/front-identificador-digitos/src/index.css
+++ b/front-identificador-digitos/src/index.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  height: 100%;
 }
 
 body {
@@ -16,5 +17,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.root {
+  height: 100%;
 }
 
