--- a/front-identificador-digitos/src/App.css
+++ b/front-identificador-digitos/src/App.css
@@ -1,107 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Kenia');
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  height: 100%;
+}
 
 html, body {
   display: flex;
   flex-direction: column;
-  overflow: hidden;    
-}
-
-.App {
-  width: 100%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
   height: 100%;
 }
-
-.App-header {
-  background: linear-gradient(to bottom, #3A7b99,  #4391b6);   
-  height: 85px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.Header-izq {
-  width: 15%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Times New Roman', Times, serif;
-  font-size: 80px;
-}
-
-.Header-logo {
-  width: 100%;
-  height: auto;
-  color: #090555;
-}
-
-.Header-der {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 25px;
-  width: 55%;
-  font-size: 20px;
-  margin-right: 30px;
-}
-
-.Header-btn {
-  height: auto;
-  border-radius: 10px;
-  padding: 10px 20px 10px 20px;
-  color: #090555;
-}
-
-.Header-text {
-  height: auto;
-  border-radius: 10px;
-  padding: 10px 20px 10px 20px;
-  color: #090555;
-}
-
-.container {
-  height: 100%;
-  background: linear-gradient(to bottom, #4391b6, #70afce, #a5def1);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 80px;
-}
-
-.cont-b {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 40px;
-}
-
-.info, .quest, .ans {
-  display: flex;
-  height: max-content;
-  width: 60%;
-  align-items: center;
-  justify-content: center;
-  font-size: xx-large; 
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; 
-}
-
-.quest, .ans {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: xx-large;
-}
-/*
-0 0 255 
-0 187 255
-255 234 0 
-255 0 0 
-
-40 - 255
-22 - 
-*/
