--- a/front-identificador-digitos/src/components/css/Form.css
+++ b/front-identificador-digitos/src/components/css/Form.css
@@ -1,17 +1,20 @@
 .form {
+    height: 400px;
+    width: 400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 30px;
+    background-color: rgb(111, 194, 194);
 }
 
 input {
     width: 185px;
-    height: max-content;
+    height: 30px;
 }
 
 button {
     width: 150px;
-    height: max-content;
+    height: 30px;
 }
