--- a/front-identificador-digitos/src/components/css/Header.css
+++ b/front-identificador-digitos/src/components/css/Header.css
@@ -1,3 +1,7 @@
+a{
+  text-decoration: none;
+}
+
 @media (min-width: 1000px) {
   .App-header {
       background: linear-gradient(to bottom, #3A7b99,  #4391b6);   
