Pequeños cambios de diseño y un log para ver que pasa

--- a/front-identificador-digitos/src/components/css/Exercise.css
+++ b/front-identificador-digitos/src/components/css/Exercise.css
@@ -10,10 +10,22 @@
       gap: 90px
     }
 
-    .nuevoEjercicio {
-        width: 250px;
+    button{
+        width: 150px;
         min-height: 40px;
         color: #F3E7E7;
-        background-color: #262669;
+        font-size: medium;
+    }
+
+    .ver {
+        background-color: #124E06;
+    }
+
+    .editar {        
+        background-color: #6C1F72;
+    }
+
+    .eliminar{
+        background-color: #951414;
     }
 }
