--- a/front-identificador-digitos/src/components/css/Exercises.css
+++ b/front-identificador-digitos/src/components/css/Exercises.css
@@ -14,6 +14,6 @@
         width: 250px;
         min-height: 40px;
         color: #F3E7E7;
-        background-color: #262669;
+        background-color: #6e2f5f;
     }
 }
