Creo que corregí que muera al eliminar, tambien cree el archivo de alta y un poco más de estilos

--- a/front-identificador-digitos/src/components/css/Exercise.css
+++ b/front-identificador-digitos/src/components/css/Exercise.css
@@ -17,6 +17,10 @@
         font-size: medium;
     }
 
+    .link{
+        color: #F3E7E7;
+    }
+
     .ver {
         background-color: #124E06;
     }
