--- a/front-identificador-digitos/src/components/css/Header.css
+++ b/front-identificador-digitos/src/components/css/Header.css
@@ -45,6 +45,13 @@ a{
       padding: 10px 20px 10px 20px;
       color: #090555;
     }
+
+    .Header-CS {
+      height: auto;
+      border-radius: 10px;
+      padding: 10px 20px 10px 20px;
+      color: #090555;
+    }
     
     .Header-text {
       height: auto;
