--- a/front-identificador-digitos/src/components/css/Exercise.css
+++ b/front-identificador-digitos/src/components/css/Exercise.css
@@ -26,7 +26,7 @@
     }
 
     .editar {        
-        background-color: #6C1F72;
+        background-color: #b9ad06;
     }
 
     .eliminar{
@@ -34,5 +34,6 @@
     }
     .derecha {
         margin-left: 50px;
+        gap: 20px;
     }
 }
