Cambios de Daniel
Tuvo problemas para hacer la consulta general

--- a/front-identificador-digitos/src/components/css/Exercise.css
+++ b/front-identificador-digitos/src/components/css/Exercise.css
@@ -36,4 +36,10 @@
         margin-left: 50px;
         gap: 20px;
     }
+
+    td {
+        border: solid 1px;
+        height: min-content;
+
+    }
 }
