--- a/front-identificador-digitos/src/components/css/Exercise.css
+++ b/front-identificador-digitos/src/components/css/Exercise.css
@@ -1,3 +1,9 @@
+ * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    max-height: 100%;
+ }
 @media (min-width: 600px) {
     .MarginContainer {
       display: flex;
@@ -12,7 +18,7 @@
 
     button{
         width: 150px;
-        min-height: 40px;
+        height: 40px;
         color: #F3E7E7;
         font-size: medium;
     }
@@ -32,14 +38,25 @@
     .eliminar{
         background-color: #951414;
     }
-    .derecha {
-        margin-left: 50px;
-        gap: 20px;
+
+    tr {
+        border: solid 1px;
     }
 
-    td {
-        border: solid 1px;
-        height: min-content;
+    .derecha {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-left: 50px;
+        gap: 20px;
+        align-items: center;
+        width: 45%;
+    }
 
+    .datos {
+        text-align: center;
+        padding-top: 33px;
+        width: 45%;
+        margin-left: 50px;
     }
 }
